# de-uku-distributed-systems

./: .flake8  .gitignore  Dockerfile  Dockerfile_base  Dockerfile_master  Dockerfile_secondary_01  Dockerfile_secondary_02  Makefile  README.md  app_00_master.py  app_01_secondary.py  compose.yaml  pyproject.toml
src/: app_00_master.py  app_01_secondary.py  app_02_secondary.py  app_master.py  app_secondary.py  app_secondary_2.py  init_secondaries.py  model.py  service.py
src/utils/: helpers.py  logger.py
test/: __init__.py  test_app_00_master.py  test_app_master.py  unit_test.py
