[tool.poetry]
name = "de-uku-distributed-systems"
version = "0.1.0"
description = "Replicated log with one master and two secondary servers"
authors = ["Anton Ibragimov"]
readme = "README.md"
packages = [{include = "de_uku_distributed_systems"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
requests = "^2.31.0"
httpx = "^0.25.0"
backoff = "^2.2.1"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
